--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNBX78ALAAW1baBNeqNz62s",
+      "authorship_tag": "ABX9TyNBFHjWiFfs7ThUTa5m5qvg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -81,7 +81,7 @@
         "id": "6KHtFtqUwTUM",
         "outputId": "1268aa67-7eae-47fb-de20-7646092f90b5"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -100,6 +100,47 @@
       "metadata": {
         "id": "fp37rkkuuxHo"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**Aula 7** ⏰ ⚗ ✈"
+      ],
+      "metadata": {
+        "id": "HOTIZ-g032jP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print (\"Sou assistente virtual, como posso ajudar \\n\")\n",
+        "nome = input (\"digite seu nome: \")\n",
+        "print(f\"Olá, {nome}. Qual é sua duvida hoje \")\n",
+        "resposta = input(\"Qual o assunto que deseja tratar: Matematica, python, Javascript \").lower()\n",
+        "print(f\"Que bom, {nome}, vamos falar sobre {resposta}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZA3lVUnp5PwW",
+        "outputId": "350f7c01-724e-4ec4-9cfb-de76575cb980"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Sou assistente virtual, como posso ajudar \n",
+            "\n",
+            "digite seu nome: angelo\n",
+            "Olá, angelo. Qual é sua duvida hoje \n",
+            "Qual o assunto que deseja tratar: Matematica, python, Javascriptpython\n",
+            "Que bom, angelo, vamos falar sobre python\n"
+          ]
+        }
+      ]
     }
   ]
 }
