--- a/untitled0.ipynb
+++ b/untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN2kZPi7Zvjxb9rUnfJ6Smh",
+      "authorship_tag": "ABX9TyMsDOZOVGSnt6i146h5etNU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -260,6 +260,67 @@
             "Olá, angelo. Qual é a sua dúvida hoje?\n",
             "Qual o assunto que deseja tratar: matematica, python, javascript python\n",
             "Que bom, angelo, vamos falar sobre python.Python é uma linguagem de programação de alto nível, interpretada e de propósito geral, conhecida por sua sintaxe simples e legível, que enfatiza a produtividade do programador.  \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Aula 7** ⛹ ⛈ ♣"
+      ],
+      "metadata": {
+        "id": "FsJCKtjYATzv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "dicas_do_dia = [\"🌅 A primeira hora define o dia.\",\n",
+        "\n",
+        "                \"🎯 Foque no essencial.\",\n",
+        "\n",
+        "                \"🌱 Pequenos progressos todos os dias.\",\n",
+        "\n",
+        "                \"🚫 Diga 'não' sem culpa.\",\n",
+        "\n",
+        "                \"💪 Você é mais forte do que pensa.\",\n",
+        "\n",
+        "                \"🍎 Cuide do seu templo.\",\n",
+        "\n",
+        "                \"✨ Encontre a beleza no comum.\",\n",
+        "                ]\n",
+        "while True:\n",
+        "  pedido = input(\"Digite 'dica' para receber uma dica ou 'sair' para encerrar \\n \").lower()\n",
+        "\n",
+        "  if pedido == \"dica\":\n",
+        "    dica = random.choice(dicas_do_dia) # escolhe uma dica aleatóriasair\n",
+        "    print(f\"Dica: {dica} \\n\")\n",
+        "  elif pedido == \"sair\":\n",
+        "    print(\"Até a próxima! \\n\")\n",
+        "    break\n",
+        "  else:\n",
+        "    print(\"Comando inválido. Tente novamente. \\n\")\n",
+        "    break"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XdkGG1ocBHUD",
+        "outputId": "fadd8ea9-efb9-4754-c5b1-04ab23b044ec"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite 'dica' para receber uma dica ou 'sair' para encerrar \n",
+            " dica\n",
+            "Dica: ✨ Encontre a beleza no comum. \n",
+            "\n"
           ]
         }
       ]
